# leafwing_manifest

./: Cargo.toml  MOTIVATION.md  README.md  RELEASES.md
assets/: credits.md  items.ron  raw_items.ron  tiles.ron
examples/: custom_asset_lifecycle.rs  custom_asset_lifecycles.rs  dependent_manifests.rs  dynamic_manifest.rs  entities_from_manifests.rs  hello_world.rs  item_crossreferencing.rs  items.rs  items_by_name.rs  manifest_editors.rs  preprocess_assets.rs  raw_manifest.rs  simple.rs  spawning_bundle_pattern.rs  spawning_constructor_pattern.rs  spawning_scene_pattern.rs  split_manifests.rs
src/: asset_state.rs  identifier.rs  lib.rs  manifest.rs  plugin.rs
tools/ci/src/: main.rs
