[package]
name = "leafwing_manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_asset"] }
serde = "1.0.195"
thiserror = "1.0.58"

[dev-dependencies]
ron = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
